kube/ing/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-shop-ing

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
    - host: banana-shop.odds.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banana-shop-service
                port:
                  number: 8080
    - host: banana-shop-api.odds.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banana-shop-gw-service
                port:
                  number: 8080
